--- a/main.ipynb
+++ b/main.ipynb
@@ -562,6 +562,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Kernels**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 295,
    "metadata": {},
@@ -774,8 +781,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (self, input_size, kernel_name, pool_size, stride, padding, conv_pool_layers, hidden_layers, neurons_per_layer, output_size, activation_function):\n",
-    "# Ejemplo de uso\n",
     "input_size = 28 # Tamaño de entrada (por ejemplo, imágenes de 28x28)\n",
     "kernel_name = kernel_rightSobel\n",
     "pool_size = 2\n",
@@ -832,22 +837,18 @@
     "plt.show()\n",
     "\n",
     "def calculate_accuracy(model, X_test, Y_test):\n",
-    "    # Obtener predicciones\n",
     "    predictions = model.predict(X_test)\n",
     "\n",
-    "    # Asegúrate de que tanto predictions como Y_test son tensores o arrays de NumPy\n",
     "    if not isinstance(predictions, np.ndarray):\n",
     "        predictions = predictions.numpy()\n",
     "    if not isinstance(Y_test, np.ndarray):\n",
     "        Y_test = Y_test.numpy()\n",
     "\n",
-    "    # Realizar la comparación\n",
     "    correct = (predictions == Y_test).sum().item()\n",
     "    total = len(Y_test)\n",
     "    accuracy = correct / total\n",
     "    return accuracy\n",
     "\n",
-    "# Calcular y mostrar el accuracy\n",
     "accuracy = calculate_accuracy(model, data_test.values, label_test)\n",
     "print(f\"Accuracy: {accuracy * 100:.2f}%\")"
    ]
@@ -881,10 +882,8 @@
    "source": [
     "predictions = model.predict(data_test.values)\n",
     "\n",
-    "# Comparar predicciones con etiquetas reales\n",
     "comparison = pd.DataFrame({'Real Label': label_test, 'Predicted Label': predictions.numpy()})\n",
     "\n",
-    "# Mostrar los resultados\n",
     "print(comparison)"
    ]
   }
